White space under images not fixed/hyphen not working

--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -5,3 +5,10 @@
     clear: both;
   }
 }
+
+@mixin absCenter { //This mixin is only used in popup.scss but can be used in other files too. 
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
